add styles in link on header

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <li><a href="#Contact">Contacto</a></li>
             </ul> 
         </nav>
-        <div class="contPerfil">
-            <div class="fotoPerfil">
-                <figure>
+        <div class="contGralHead">
+            <div class="contPerfil">
+                <figure id="fotoPerfil">
                     <img src="assets/img/fotoperfil.jpg" alt="">
                 </figure>
             </div>
