change color in rrss

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 </head>
 <body>
     <header>
+        <div class="contGralHead">
+            <div class="contPerfil">
+                <figure id="fotoPerfil">
+                    <img src="assets/img/fotoperfil.jpg" alt="">
+                </figure>
+            </div>
+            <div class="rrss">
+                <a href="#" class="rrssh"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="#" class="rrssh"><i class="fa-brands fa-github"></i></a>
+                <a href="#" class="rrssh"><i class="fa-brands fa-twitter"></i></a>
+            </div>
+        </div>
         <nav class="nav-bar">
             <ul>
                 <li><a href="#Home">Home</a></li>
@@ -18,18 +30,6 @@
                 <li><a href="#Contact">Contacto</a></li>
             </ul> 
         </nav>
-        <div class="contGralHead">
-            <div class="contPerfil">
-                <figure id="fotoPerfil">
-                    <img src="assets/img/fotoperfil.jpg" alt="">
-                </figure>
-            </div>
-            <div class="rrss">
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-            </div>
-        </div>
         
     </header>
     
