--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <main>
         <section id="Home">
             <h2>Hi I'm Salvador</h2>
-            <div class="">
+            <div class="subtitle">
                 <p>- I'm learning HTML & CSS</p>
-                <a href="" class="btn-Contact">Contáctame</a>
+                <a href="#Contact" class="btn-Contact">Contáctame</a>
             </div>
         </section>
         
