add flex in footer

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </main>
 
     <footer>
-        <h4>Sitio diseñado por <a href="">@Nicolas Jofre</a></h4>
+        <h4>Sitio diseñado por <a class="redPersonal" href="https://github.com/nicojofre5" target="_blank">@Nicolas Jofre</a></h4>
         <p>&copy; Nicolas Jofre</p>
 
     </footer>
