--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Press+Start+2P&family=Righteous&family=Smokum&family=Tilt+Prism&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://kit.fontawesome.com/63586a8960.css" crossorigin="anonymous">
     <title>Portfolio | Salvador Watts</title>
 </head>
