--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Press+Start+2P&family=Righteous&family=Smokum&family=Tilt+Prism&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://kit.fontawesome.com/63586a8960.css" crossorigin="anonymous">
+    <link rel="shortcut icon" href="https://img2.freepng.es/20180429/kcq/kisspng-logo-generic-brand-clip-art-5ae5c54a557da9.5305370915250076903502.jpg" type="image/x-icon">
     <title>Portfolio | Salvador Watts</title>
 </head>
 <body>
@@ -155,6 +156,6 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/63586a8960.js" crossorigin="anonymous"></script>
-    
+    <script src="js/main.js"></script>
 </body>
 </html>
